--- a/.travis/install
+++ b/.travis/install
@@ -22,4 +22,10 @@ if [ "$(uname -s)" != "Darwin" ]; then
 fi
 
 pip3 install -U setuptools
+
+# force cryptography to use the system's OpenSSL if requested
+if [ -n "$CRYPTOGRAPHY_NO_BINARY" ]; then
+    pip3 install cryptography --no-binary cryptography
+fi
+
 pip3 install coverage flake8 isort opencv-python
