--- a/.travis/install
+++ b/.travis/install
@@ -21,7 +21,7 @@ if [ "$(uname -s)" != "Darwin" ]; then
     export PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
 fi
 
-pip3 install -U setuptools
+pip3 install -U pip setuptools
 
 # force cryptography to use the system's OpenSSL if requested
 if [ -n "$CRYPTOGRAPHY_NO_BINARY" ]; then
